admin dan divisi

--- a/admin/detail-surat-keluar.html
+++ b/admin/detail-surat-keluar.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Arsipin - Data Arsip</title>
+    <title>Arsipin - Surat Keluar</title>
     <meta content="Admin Dashboard" name="description" />
     <meta content="themesdesign" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -224,7 +224,7 @@
                                     <div class="row">
                                         <div class="col-sm-12">
                                             <div class="page-title-box">
-                                                <h4 class="page-title">Data Arsip</h4>
+                                                <h4 class="page-title">Detail Surat Keluar</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -232,100 +232,113 @@
                                         <div class="col-12">
                                             <div class="card m-b-30">
                                                 <div class="card-body">
-                                                    <div class="float-left">
-                                                        <p>
-                                                            <a href="form-add-data-arsip.html">
-                                                                <button type="button" class="btn btn-info btn-sm">Tambah Data</button></p>
-                                                            </a>
+                                                    <div class="form-group row">
+                                                        <label for="example-number-input"class="col-sm-2
+                                                        col-form-label">No. Surat</label>
+                                                        <div class="col-sm-10">
+                                                            <label for="example-number-input"class="col-sm-2
+                                                            col-form-label">SR-131</label>
                                                         </div>
-                                                        <table class="table">
-                                                            <thead>
-                                                                <tr>
-                                                                    <th>No</th>
-                                                                    <th>Nama</th>
-                                                                    <th>Jenis Arsip</th>
-                                                                    <th>File pdf/jpg</th>
-                                                                    <th>Aksi</th>
-
-                                                                </tr>
-                                                            </thead>
-                                                            <tbody>
-                                                                <tr>
-                                                                    <td>1</td>
-                                                                    <td>Kontrak Kerja Marketing</td>
-                                                                    <td>Kontrak Kerja</td>
-                                                                    <td>Kontrak-Kerja.pdf</td>
-                                                                    <td><a href=update-data-arsip.html>
-                                                                        <button type="button" class="btn-primary">Edit</button></a>
-                                                                        &nbsp
-                                                                        <a href=data-arsip.html>
-                                                                            <button type="button" class="btn-danger">Hapus</button></a></td>
-
-                                                                        </tr>
-                                                                        <tr>
-                                                                            <td>2</td>
-                                                                            <td>Kontrak Kerja Marketing</td>
-                                                                            <td>Kontrak Kerja</td>
-                                                                            <td>Kontrak-Kerja.pdf</td>
-                                                                            <td><a href=update-data-arsip.html>
-                                                                        <button type="button" class="btn-primary">Edit</button></a>
-                                                                        &nbsp
-                                                                        <a href=data-arsip.html>
-                                                                            <button type="button" class="btn-danger">Hapus</button></a></td>
-
-                                                                        </tr>
-                                                                    </tr>
-                                                                </tbody>
-                                                            </table>
-                                                        </div>
-
                                                     </div>
-                                                </div>
-                                            </div> <!-- end col -->
-                                        </div> <!-- end row -->
+                                                    <div class="form-group row">
+                                                        <label for="example-number-input"class="col-sm-2
+                                                        col-form-label">Tanggal Surat</label>
+                                                        <div class="col-sm-10">
+                                                            <label for="example-number-input"class="col-sm-2
+                                                            col-form-label">05 Oktober 2021</label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="example-number-input"class="col-sm-2
+                                                        col-form-label">Tujuan Surat</label>
+                                                        <div class="col-sm-10">
+                                                            <label for="example-number-input"class="col-sm-2
+                                                            col-form-label">Politeknik Negeri Jember</label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label for="example-number-input"class="col-sm-2
+                                                        col-form-label">Perihal</label>
+                                                        <div class="col-sm-10">
+                                                            <label for="example-number-input"class="col-sm-2
+                                                            col-form-label">Perizinan lokasi PKL</label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <label class="col-sm-2
+                                                        col-form-label"for="example-input1-group2">File</label>
+                                                        <div class="col-sm-10">
+                                                            <a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing"><label for="example-number-input"class="col-sm-2
+                                                                col-form-label">PKL.pdf</label></a>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-group row">
+                                                            <div class="col-sm-5">
+                                                            </div>
+                                                            <div class="col-sm-5">
+                                                            </div>
+                                                            <div class="col-md-10 offset-md-2">
+                                                                <div class="input-group mt-2">
+                                                                    <div class="custom">
+                                                                        <div class="input-group append">
+                                                                            <a href="surat-keluar.html">
+                                                                            <button class="btn btn-danger btn-sm" type="button">Kembali</button>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div> <!-- end col -->
+                                            </div> <!-- end row -->
 
 
-                                    </div><!-- container -->
+                                        </div><!-- container -->
 
-                                </div> <!-- Page content Wrapper -->
+                                    </div> <!-- Page content Wrapper -->
 
-                            </div><!-- container -->
+                                </div><!-- container -->
 
-                        </div> <!-- Page content Wrapper -->
+                            </div> <!-- Page content Wrapper -->
 
-                    </div> <!-- content -->
+                        </div> <!-- content -->
+                        <footer class="footer">
+                            © 2018 - 2020 Dashor by Themesdesign.
+                        </footer>
 
-                    <footer class="footer">
-                        © 2018 - 2020 Dashor by Themesdesign.
-                    </footer>
+                    </div>
+                    <!-- End Right content here -->
 
                 </div>
-                <!-- End Right content here -->
-
-            </div>
-            <!-- END wrapper -->
+                <!-- END wrapper -->
 
 
-            <!-- jQuery  -->
-            <script src="assets/js/jquery.min.js"></script>
-            <script src="assets/js/bootstrap.bundle.min.js"></script>
-            <script src="assets/js/modernizr.min.js"></script>
-            <script src="assets/js/detect.js"></script>
-            <script src="assets/js/fastclick.js"></script>
-            <script src="assets/js/jquery.slimscroll.js"></script>
-            <script src="assets/js/jquery.blockUI.js"></script>
-            <script src="assets/js/waves.js"></script>
-            <script src="assets/js/jquery.nicescroll.js"></script>
-            <script src="assets/js/jquery.scrollTo.min.js"></script>
+                <!-- jQuery  -->
+                <script src="assets/js/jquery.min.js"></script>
+                <script src="assets/js/bootstrap.bundle.min.js"></script>
+                <script src="assets/js/modernizr.min.js"></script>
+                <script src="assets/js/detect.js"></script>
+                <script src="assets/js/fastclick.js"></script>
+                <script src="assets/js/jquery.slimscroll.js"></script>
+                <script src="assets/js/jquery.blockUI.js"></script>
+                <script src="assets/js/waves.js"></script>
+                <script src="assets/js/jquery.nicescroll.js"></script>
+                <script src="assets/js/jquery.scrollTo.min.js"></script>
 
-            <script src="assets/plugins/tiny-editable/mindmup-editabletable.js"></script>
-            <script src="assets/plugins/tiny-editable/numeric-input-example.js"></script>
-            <script src="assets/plugins/tabledit/jquery.tabledit.js"></script>
-            <script src="assets/pages/edit-table.js"></script>
+                <script src="assets/plugins/tiny-editable/mindmup-editabletable.js"></script>
+                <script src="assets/plugins/tiny-editable/numeric-input-example.js"></script>
+                <script src="assets/plugins/tabledit/jquery.tabledit.js"></script>
+                <script src="assets/pages/edit-table.js"></script>
 
-            <!-- App js -->
-            <script src="assets/js/app.js"></script>
+                <!-- App js -->
+                <script src="assets/js/app.js"></script>
 
-        </body>
-
-        </html>
+            </body>
+<!--<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script>
+    $('.checked-all').on('change', function(e){
+    e.preventDefault()
+    $('input[name=pilih]').prop('checked', this.checked)
+})-->
+</script>
+</html>
