--- a/admin/divisi-divisi.html
+++ b/admin/divisi-divisi.html
@@ -266,12 +266,12 @@
                                         <div class="float-left">
                                             <p>
                                                 <a href=form-add-data-divisi.html>
-                                                <button type="button" class="btn btn-info btn-lg">Tambah Data</button>
+                                                <button type="button" class="btn btn-info btn-sm">Tambah Data</button>
                                             </a>
                                         </p>
                                     </div>
-                                        <div class="table-responsive">
-                                            <table class="table" id="my-table">
+                                        
+                                            <table class="table" >
                                                 <thead>
                                                     <tr>
                                                         <th>No</th>
@@ -283,10 +283,22 @@
                                                     <tr>
                                                         <td>1</td>
                                                         <td>Marketing</td>
+                                                        <td><a href=update-divisi.html
+                                                        <button type="button" class="btn-primary">Edit</button></a>
+                                                        &nbsp
+                                                        <a href=divisi-divisi.html
+                                                        <button type="button" class="btn-danger">Hapus</button></a>
+                                                    </td>
                                                     </tr>
                                                     <tr>
                                                         <td>2</td>
                                                         <td>HRD</td>
+                                                        <td><a href=update-divisi.html
+                                                        <button type="button" class="btn-primary">Edit</button></a>
+                                                        &nbsp
+                                                        <a href=divisi-divisi.html
+                                                        <button type="button" class="btn-danger">Hapus</button></a>
+                                                    </td>
                                                     </tr>
                                                     
                                                 </tbody>
