--- a/admin/form-add-jenis-arsip.html
+++ b/admin/form-add-jenis-arsip.html
@@ -261,7 +261,7 @@
                                             <div class="form-group row">
                                                 <label for="example-text-input" class="col-sm-2 col-form-label">Nama/Jenis Arsip</label>
                                                 <div class="col-sm-5">
-                                                    <input class="form-control" type="text" value="Akte Perusahaan" id="example-text-input">
+                                                    <input class="form-control" type="text" value="" id="example-text-input">
                                                 </div>
                                             </div>
                                             <div class="form-group row">
@@ -271,14 +271,14 @@
                                                                 <div class="input-group-append">
 
                                                                 <a href=jenis-arsip.html>
-                                                                    <button class="btn btn-primary" type="button">Simpan</button></a>
+                                                                    <button class="btn btn-primary btn-sm" type="button">Simpan</button></a>
                                                                 </div>
                                                                     
                                                                 </div> &nbsp &nbsp
                                                                 <div class="input-group-append">
 
                                                                 <a href=jenis-arsip.html>
-                                                                    <button class="btn btn-danger" type="button">Batal</button></a>
+                                                                    <button class="btn btn-danger btn-sm" type="button">Batal</button></a>
                                                                 </div>
                                                             </div>
                                                         </div>
