--- a/admin/update-surat-keluar.html
+++ b/admin/update-surat-keluar.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Arsipin - Tambah Data Surat Keluar</title>
+    <title>Arsipin - Edit Data Surat Keluar</title>
     <meta content="Admin Dashboard" name="description" />
     <meta content="themesdesign" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -251,7 +251,7 @@
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div class="page-title-box">
-                                            <h4 class="page-title">Tambah Surat Keluar</h4>
+                                            <h4 class="page-title">Edit Surat Keluar</h4>
                                         </div>
                                     </div>
                                 </div>
@@ -262,25 +262,25 @@
                                                 <div class="form-group row">
                                                     <label for="example-number-input" class="col-sm-2 col-form-label">No. Surat</label>
                                                     <div class="col-sm-5">
-                                                        <input class="form-control" type="number" value="" id="example-number-input">
+                                                        <input class="form-control" type="number" value="SR-131" id="example-number-input">
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
                                                     <label for="example-date-input" class="col-sm-2 col-form-label">Tanggal Surat</label>
                                                     <div class="col-sm-5">
-                                                        <input class="form-control" type="date" value="" id="example-date-input">
+                                                        <input class="form-control" type="date" value="05 Oktober 2021" id="example-date-input">
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
                                                     <label for="example-text-input" class="col-sm-2 col-form-label">Tujuan Surat</label>
                                                     <div class="col-sm-5">
-                                                        <input class="form-control" type="text" value="" id="example-text-input">
+                                                        <input class="form-control" type="text" value="Politeknik Negeri Jember" id="example-text-input">
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
                                                     <label for="example-text-input" class="col-sm-2 col-form-label">Perihal</label>
                                                     <div class="col-sm-5">
-                                                        <input class="form-control" type="text" value="" id="example-text-input">
+                                                        <input class="form-control" type="text" value="Penerimaan mahasiswa PKL" id="example-text-input">
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
@@ -290,7 +290,7 @@
                                                             <div class="input-group-prepend">
                                                                 <div class="custom-file">
                                                                     <input type="file" class="custom-file-input" id="inputGroupFile04">
-                                                                    <label class="custom-file-label" for="inputGroupFile04">Choose file</label>
+                                                                    <label class="custom-file-label" for="inputGroupFile04">PKL-Polije.pdf</label>
                                                                 </div> 
                                                                 <div class="input-group-append">
                                                                     <button class="btn btn-primary" type="button">Upload</button>
