--- a/divisi/form-add-data-arsip.html
+++ b/divisi/form-add-data-arsip.html
@@ -289,14 +289,14 @@
                                                                 <div class="input-group-append">
 
                                                                 <a href=data-arsip.html>
-                                                                    <button class="btn btn-primary" type="button">Simpan</button></a>
+                                                                    <button class="btn btn-primary btn-sm" type="button">Simpan</button></a>
                                                                 </div>
                                                                     
                                                                 </div> &nbsp &nbsp
                                                                 <div class="input-group-append">
 
                                                                 <a href=data-arsip.html>
-                                                                    <button class="btn btn-danger" type="button">Batal</button></a>
+                                                                    <button class="btn btn-danger btn-sm" type="button">Batal</button></a>
                                                                 </div>
                                                             </div>
                                                             </div>
