--- a/admin/data-arsip.html
+++ b/admin/data-arsip.html
@@ -267,11 +267,11 @@
                                                         <div class="float-left">
                                                             <p>
                                                                 <a href=form-add-data-arsip.html>
-                                                                    <button type="button" class="btn btn-info btn-lg">Tambah Data</button></p>
+                                                                    <button type="button" class="btn btn-info btn-sm">Tambah Data</button></p>
                                                                 </a>
                                                             </div>
-                                                            <div class="table-responsive">
-                                                                <table class="table" id="my-table">
+                                                            
+                                                                <table class="table">
                                                                     <thead>
                                                                         <tr>
                                                                             <th>No</th>
@@ -289,6 +289,11 @@
                                                                             <td>Kontrak Kerja</td>
                                                                             <td>14/10/2021</td>
                                                                             <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">Kontrak-Kerja.pdf</a></td>
+                                                                            <td><a href=update-data-arsip.html>
+                                                                        <button type="button" class="btn-primary">Edit</button></a>
+                                                                        &nbsp
+                                                                        <a href=data-arsip.html>
+                                                                            <button type="button" class="btn-danger">Hapus</button></a></td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td>2</td>
@@ -296,6 +301,11 @@
                                                                             <td>Akte Perusahaan</td>
                                                                             <td>13/10/2021</td>
                                                                             <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">Akte-Perusahaan.pdf</a></td>
+                                                                            <td><a href=update-data-arsip.html>
+                                                                        <button type="button" class="btn-primary">Edit</button></a>
+                                                                        &nbsp
+                                                                        <a href=data-arsip.html>
+                                                                            <button type="button" class="btn-danger">Hapus</button></a></td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td>3</td>
@@ -303,6 +313,11 @@
                                                                             <td>NPWP</td>
                                                                             <td>10/10/2021</td>
                                                                             <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">NPWP-Hummasoft.pdf</a></td>
+                                                                            <td><a href=update-data-arsip.html>
+                                                                        <button type="button" class="btn-primary">Edit</button></a>
+                                                                        &nbsp
+                                                                        <a href=data-arsip.html>
+                                                                            <button type="button" class="btn-danger">Hapus</button></a></td>
                                                                         </tr>
                                                                     </tbody>
                                                                 </table>
