--- a/admin/form-add-data-divisi.html
+++ b/admin/form-add-data-divisi.html
@@ -266,7 +266,7 @@
                                             <div class="form-group row">
                                                 <label for="example-text-input" class="col-sm-2 col-form-label">Nama Divisi</label>
                                                 <div class="col-sm-10">
-                                                    <input class="form-control" type="text" value="Pemasaran" id="example-text-input">
+                                                    <input class="form-control" type="text" value="" id="example-text-input">
                                                 </div>
                                             </div>
                                             <div class="form-group row">
@@ -276,14 +276,14 @@
                                                                 <div class="input-group-append">
 
                                                                 <a href=divisi-divisi.html>
-                                                                    <button class="btn btn-primary" type="button">Simpan</button></a>
+                                                                    <button class="btn btn-primary btn-sm" type="button">Simpan</button></a>
                                                                 </div>
                                                                     
                                                                 </div> &nbsp &nbsp
                                                                 <div class="input-group-append">
 
                                                                 <a href=divisi-divisi.html>
-                                                                    <button class="btn btn-danger" type="button">Batal</button></a>
+                                                                    <button class="btn btn-danger btn-sm" type="button">Batal</button></a>
                                                                 </div>
                                                             </div>
                                     </div>
