--- a/admin/form-add-data-pengguna.html
+++ b/admin/form-add-data-pengguna.html
@@ -266,13 +266,13 @@
                                                     <div class="form-group row">
                                                         <label for="example-text-input" class="col-sm-2 col-form-label">Nama</label>
                                                         <div class="col-sm-5">
-                                                            <input class="form-control" type="text" value="Arnetta" id="example-text-input">
+                                                            <input class="form-control" type="text" value="" id="example-text-input">
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
                                                         <label for="example-date-input" class="col-sm-2 col-form-label">Email</label>
                                                         <div class="col-sm-5">
-                                                            <input class="form-control" type="text" value="arnet67@gmail.com" id="example-date-input">
+                                                            <input class="form-control" type="text" value="" id="example-date-input">
                                                         </div>
                                                     </div>
                                                     <div class="form-group row">
@@ -288,13 +288,13 @@
                                                 <div class="form-group row">
                                                     <label for="example-text-input" class="col-sm-2 col-form-label">Username</label>
                                                     <div class="col-sm-5">
-                                                        <input class="form-control" type="text" value="Arneta" id="example-text-input">
+                                                        <input class="form-control" type="text" value="" id="example-text-input">
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
                                                     <label for="example-text-input" class="col-sm-2 col-form-label">Password</label>
                                                     <div class="col-sm-5">
-                                                        <input class="form-control" type="text" value="arnet26" id="example-text-input">
+                                                        <input class="form-control" type="text" value="" id="example-text-input">
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
