--- a/admin/form-add-surat-masuk.html
+++ b/admin/form-add-surat-masuk.html
@@ -261,31 +261,41 @@
                                                         <div class="form-group row">
                                                             <label for="example-number-input" class="col-sm-2 col-form-label">No. Surat</label>
                                                             <div class="col-sm-5">
-                                                                <input class="form-control" type="number" value="121" id="example-number-input">
+                                                                <input class="form-control" type="number" value="" id="example-number-input">
                                                             </div>
                                                         </div>
                                                         <div class="form-group row">
                                                             <label for="example-date-input" class="col-sm-2 col-form-label">Tanggal Surat</label>
                                                             <div class="col-sm-5">
-                                                                <input class="form-control" type="date" value="2011-08-19" id="example-date-input">
+                                                                <input class="form-control" type="date" value="" id="example-date-input">
                                                             </div>
                                                         </div>
                                                         <div class="form-group row">
                                                             <label for="example-date-input" class="col-sm-2 col-form-label">Tanggal Terima</label>
                                                             <div class="col-sm-5">
-                                                                <input class="form-control" type="date" value="2011-08-19" id="example-date-input">
+                                                                <input class="form-control" type="date" value="" id="example-date-input">
                                                             </div>
                                                         </div>
                                                         <div class="form-group row">
                                                             <label for="example-text-input" class="col-sm-2 col-form-label">Asal Surat</label>
                                                             <div class="col-sm-5">
-                                                                <input class="form-control" type="text" value="Politeknik Negeri Jember" id="example-text-input">
+                                                                <input class="form-control" type="text" value="" id="example-text-input">
                                                             </div>
                                                         </div>
                                                         <div class="form-group row">
+                                                        <label for="example-date-input" class="col-sm-2 col-form-label">Ditujukan Kepada</label>
+                                                        <div class="col-sm-5">
+                                                            <select class="form-control" name="Role">
+                                                            <option value=""hidden disabled selected>Pilih Divisi</option>
+                                                            <option value="marketing">Marketing</option>
+                                                            <option value="hrd">HRD</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                        <div class="form-group row">
                                                             <label for="example-text-input" class="col-sm-2 col-form-label">Perihal</label>
                                                             <div class="col-sm-5">
-                                                                <input class="form-control" type="text" value="PKL" id="example-text-input">
+                                                                <input class="form-control" type="text" value="" id="example-text-input">
                                                             </div>
                                                         </div>
                                                         <div class="form-group row">
@@ -318,14 +328,14 @@
                                                                 <div class="input-group-append">
 
                                                                 <a href=surat-masuk.html>
-                                                                    <button class="btn btn-primary" type="button">Simpan</button></a>
+                                                                    <button class="btn btn-primary btn-sm" type="button">Simpan</button></a>
                                                                 </div>
                                                                     
                                                                 </div> &nbsp &nbsp
                                                                 <div class="input-group-append">
 
                                                                 <a href=surat-masuk.html>
-                                                                    <button class="btn btn-danger" type="button">Batal</button></a>
+                                                                    <button class="btn btn-danger btn-sm" type="button">Batal</button></a>
                                                                 </div>
                                                             </div>
                                                             </div>
