--- a/divisi/surat-masuk.html
+++ b/divisi/surat-masuk.html
@@ -244,9 +244,8 @@
                                                                     <th>Tanggal Surat</th>
                                                                     <th>Tanggal Terima</th>
                                                                     <th>Asal Surat</th>
-                                                                    <th>Perihal</th>
-                                                                    <th>File</th>
                                                                     <th>Aksi</th>
+                                                                    <th>Status</th>
                                                                 </tr>
                                                             </thead>
                                                             <tbody>
@@ -256,8 +255,15 @@
                                                                     <td>1 Oktober 2021</td>
                                                                     <td>4 Oktober 2021</td>
                                                                     <td>Politeknik Negeri Jember</td>
-                                                                    <td>Perizinan lokasi PKL</td>
-                                                                    <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">PKL.pdf</a></td>
+                                                                    <td><a href=#>
+                                                                    <button type="button" class="btn-info">Laksanakan</button></a>
+                                                                    &nbsp
+                                                                    <a href=#>
+                                                                    <button type="button" class="btn-danger">Abaikan</button></a>
+                                                                    &nbsp
+                                                                    <a href=detail-surat-masuk.html>
+                                                                    <button type="button" class="btn-warning">Detail</button></a>
+                                                                </td>
                                                                     <td><a href="#" class="fa fa-check" onclick="klik_laksanakan()" id="laksanakan"></a>
                                                                         &nbsp&nbsp
                                                                         <a href="#" class="fa fa-times" onclick="klik_abaikan()" id="abaikan"></a>
@@ -268,8 +274,15 @@
                                                                     <td>4 Oktober 2021</td>
                                                                     <td>5 Oktober 2021</td>
                                                                     <td>Tokopedia</td>
-                                                                    <td>Meeting</td>
-                                                                    <td><a href="https://drive.google.com/file/d/1XCtlTwCOrE39jRuhD9efdgeohNfoykEx/view?usp=sharing">meet-tokopedia.pdf</a></td>
+                                                                    <td><a href=#>
+                                                                    <button type="button" class="btn-info">Laksanakan</button></a>
+                                                                    &nbsp
+                                                                    <a href=#>
+                                                                    <button type="button" class="btn-danger">Abaikan</button></a>
+                                                                    &nbsp
+                                                                    <a href=#>
+                                                                    <button type="button" class="btn-warning">Detail</button></a>
+                                                                </td>
                                                                     <td><a href="#" class="fa fa-check" onclick="klik_laksanakan2()" id="laksanakan2"></a>
                                                                         &nbsp&nbsp
                                                                         <a href="#" class="fa fa-times" onclick="klik_abaikan2()" id="abaikan2"></a>
@@ -281,8 +294,15 @@
                                                                     <td>4 Oktober 2021</td>
                                                                     <td>7 Oktober 2021</td>
                                                                     <td>Lazada</td>
-                                                                    <td>Meeting</td>
-                                                                    <td>meet-gojek.pdf</td>
+                                                                    <<td><a href=#>
+                                                                    <button type="button" class="btn-info">Laksanakan</button></a>
+                                                                    &nbsp
+                                                                    <a href=#>
+                                                                    <button type="button" class="btn-danger">Abaikan</button></a>
+                                                                    &nbsp
+                                                                    <a href=#>
+                                                                    <button type="button" class="btn-warning">Detail</button></a>
+                                                                </td>
                                                                     <td><a href="#" class="fa fa-check" onclick="klik_laksanakan()" id="laksanakan"></a>
                                                                         &nbsp&nbsp
                                                                         <a href="#" class="fa fa-times" onclick="klik_abaikan()" id="abaikan"></a>
@@ -294,8 +314,15 @@
                                                                     <td>4 Oktober 2021</td>
                                                                     <td>8 Oktober 2021</td>
                                                                     <td>Shopee</td>
-                                                                    <td>Meeting</td>
-                                                                    <td>meet-shopee.pdf</td>
+                                                                   <td><a href=#>
+                                                                    <button type="button" class="btn-info">Laksanakan</button></a>
+                                                                    &nbsp
+                                                                    <a href=#>
+                                                                    <button type="button" class="btn-danger">Abaikan</button></a>
+                                                                    &nbsp
+                                                                    <a href=#>
+                                                                    <button type="button" class="btn-warning">Detail</button></a>
+                                                                </td>
                                                                     <td><a href="#" class="fa fa-check" onclick="klik_laksanakan()" id="laksanakan"></a>
                                                                         &nbsp&nbsp
                                                                         <a href="#" class="fa fa-times" onclick="klik_abaikan()" id="abaikan"></a>
